<!--
  ~    Copyright 2018 nsnikhil
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">Car Monitor</string>
    <string name="detailString"> %1$s : %2$.2f(in ppm)</string>
    <string name="noInternet">No Internet</string>

    <!-- form-->
    <string name="form_name">Name</string>
    <string name="form_phone">Phone no</string>
    <string name="form_car_no">Car no</string>
    <!-- -->

    <!-- formError-->
    <string name="formErrorName">we need your full name to proceed</string>
    <string name="formErrorPhone">we need your contact details to proceed</string>
    <string name="formErrorCarNo">we need your car no proceed</string>
    <!-- -->

    <!-- details-->
    <string name="detailCoordinates">0.0,0.0</string>
    <string name="detailPhone">(+91)8013410076</string>
    <string name="detailAccident">N/A</string>
    <string name="detailNoAccident">No Accidents</string>
    <!-- -->

    <!-- gasName-->
    <string name="gasMethane">Methane</string>
    <string name="gasCarbonMonoxide">CarbonMonoxide</string>
    <string name="gasNitrogen">Nitrogen</string>
    <!-- -->

    <!-- bundle-->
    <string name="bundleCarObject">bundleCarObject</string>
    <string name="bundleCarNumber">bundleCarNumber</string>
    <string name="bundleLocation">bundleLocation</string>
    <!-- -->

    <string name="google_maps_key">AIzaSyCLohj9F8k4SOH6IkUyYC-QqtfvnbKITug</string>

</resources>
